// Copyright (c) 2019 Minoru Osuka
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 		http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package index;

option go_package = "github.com/mosuka/blast/protobuf";

service Blast {
    rpc LivenessProbe (google.protobuf.Empty) returns (LivenessProbeResponse) {}
    rpc ReadinessProbe (google.protobuf.Empty) returns (ReadinessProbeResponse) {}

    rpc GetMetadata (GetMetadataRequest) returns (GetMetadataResponse) {}
    rpc GetNodeState (GetNodeStateRequest) returns (GetNodeStateResponse) {}
    rpc GetNode (GetNodeRequest) returns (GetNodeResponse) {}
    rpc SetNode (SetNodeRequest) returns (google.protobuf.Empty) {}
    rpc DeleteNode (DeleteNodeRequest) returns (google.protobuf.Empty) {}
    rpc GetCluster (google.protobuf.Empty) returns (GetClusterResponse) {}
    rpc WatchCluster (google.protobuf.Empty) returns (stream GetClusterResponse) {}
    rpc Snapshot (google.protobuf.Empty) returns (google.protobuf.Empty) {}

    rpc GetState (GetStateRequest) returns (GetStateResponse) {}
    rpc SetState (SetStateRequest) returns (google.protobuf.Empty) {}
    rpc DeleteState (DeleteStateRequest) returns (google.protobuf.Empty) {}
    rpc WatchState (WatchStateRequest) returns (stream WatchStateResponse) {}

    rpc GetDocument (GetDocumentRequest) returns (GetDocumentResponse) {}
    rpc IndexDocument (stream IndexDocumentRequest) returns (IndexDocumentResponse) {}
    rpc DeleteDocument (stream DeleteDocumentRequest) returns (DeleteDocumentResponse) {}
    rpc Search (SearchRequest) returns (SearchResponse) {}
    rpc GetIndexConfig (google.protobuf.Empty) returns (GetIndexConfigResponse) {}
    rpc GetIndexStats (google.protobuf.Empty) returns (GetIndexStatsResponse) {}
}

// use for health check
message LivenessProbeResponse {
    enum State {
        UNKNOWN = 0;
        ALIVE = 1;
        DEAD = 2;
    }
    State state = 1;
}

// use for health check
message ReadinessProbeResponse {
    enum State {
        UNKNOWN = 0;
        READY = 1;
        NOT_READY = 2;
    }
    State state = 1;
}

message GetMetadataRequest {
    string id = 1;
}

message GetMetadataResponse {
    google.protobuf.Any metadata = 1;
}

message GetNodeStateRequest {
    string id = 1;
}

message GetNodeStateResponse {
    string state = 1;
}

// use for raft cluster status
message GetNodeRequest {
    string id = 1;
}

// use for raft cluster status
message GetNodeResponse {
    google.protobuf.Any metadata = 1;
    string state = 2;
}

// use for raft cluster status
message SetNodeRequest {
    string id = 1;
    google.protobuf.Any metadata = 2;
}

// use for raft cluster status
message DeleteNodeRequest {
    string id = 1;
}

// use for raft cluster status
message GetClusterResponse {
    google.protobuf.Any cluster = 1;
}

message GetStateRequest {
    string key = 1;
}

message GetStateResponse {
    google.protobuf.Any value = 1;
}

message SetStateRequest {
    string key = 1;
    google.protobuf.Any value = 2;
}

message DeleteStateRequest {
    string key = 1;
}

message WatchStateRequest {
    string key = 1;
}

message WatchStateResponse {
    enum Command {
        UNKNOWN = 0;
        SET = 1;
        DELETE = 2;
    }
    Command command = 1;
    string key = 2;
    google.protobuf.Any value = 3;
}

message GetDocumentRequest {
    string id = 1;
}

message GetDocumentResponse {
    google.protobuf.Any fields = 1;
}

message IndexDocumentRequest {
    string id = 1;
    google.protobuf.Any fields = 2;
}

message IndexDocumentResponse {
    int32 count = 1;
}

message DeleteDocumentRequest {
    string id = 1;
}

message DeleteDocumentResponse {
    int32 count = 1;
}

message SearchRequest {
    google.protobuf.Any search_request = 1;
}

message SearchResponse {
    google.protobuf.Any search_result = 1;
}

message GetIndexConfigResponse {
    google.protobuf.Any index_config = 1;
}

message GetIndexStatsResponse {
    google.protobuf.Any index_stats = 1;
}

// use for creating snapshot
message Document {
    string id = 1;
    google.protobuf.Any fields = 2;
}
